apps/neuro-cosmos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuro-cosmos
  namespace: default
  labels:
    app: neuro-cosmos
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: neuro-cosmos
  type: ClusterIP
