apps/neuro-cosmos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuro-cosmos
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: neuro-cosmos.sentimentalk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neuro-cosmos
                port:
                  number: 80
  tls:
    - hosts:
        - neuro-cosmos.sentimentalk.com
      secretName: neuro-cosmos-tls
